# generating-shakespearean-text-using-char-rnn

./: .gitignore  pyproject.toml  train.py
src/: dataset.py  model.py  modeling.py
